--- a/Angular/clientes-app/src/app/clientes/clientes-lista/clientes-lista.component.html
+++ b/Angular/clientes-app/src/app/clientes/clientes-lista/clientes-lista.component.html
@@ -4,10 +4,21 @@
 </ol>
 <div class="container">
     <div class="row">
+        <div class="col-md-12">
+            <div class="alert alert-success" role="alert" *ngIf="mensagemSucesso">
+                {{ mensagemSucesso }}
+            </div>
+
+            <div class="alert alert-danger" role="alert" *ngIf="mensagemErro">
+                {{ mensagemErro }}
+
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-2">
-            <button class="btn btn-warning">
-                <i class="fa fa-plus"></i>
-                Novo</button>
+            <button class="btn btn-warning" (click)="novoCadastro()">
+                <i class="fa fa-plus"></i>Novo</button>
         </div>
     </div>
     <br>
@@ -29,7 +40,16 @@
                         <td>{{ cliente.nome }}</td>
                         <td>{{ cliente.cpf }}</td>
                         <td>{{ cliente.dataCadastro }}</td>
-                        <td></td>
+                        <td>
+                            <button class="btn btn-primary" routerLink="/clientes-form/{{ cliente.id }}">
+                                <i class="fa fa-edit"></i>
+                            </button>
+
+                            <button class="btn btn-danger ml-2" (click)="preparaDelecao(cliente)" data-toggle="modal" data-target="#modalDelecao">
+                                <i class="fa fa-trash-alt"></i>
+                            </button>
+
+                        </td>
 
 
                     </tr>
@@ -39,5 +59,24 @@
 
         </div>
     </div>
+    <div id="modalDelecao" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4>Confirmação</h4>
+                </div>
+                <div class="modal-body" *ngIf="clienteSelecionado">
+                    Confirma a exclusão do Cliente selecionado ?
+                    <hr> Nome: {{ clienteSelecionado.nome }} <br> CPF: {{ clienteSelecionado.cpf}}
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-success" data-dismiss="modal" (click)="deletarCliente()">Confirma</button>
+                    <button class="btn btn-danger" data-dismiss="modal">Cancela</button>
 
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 </div>
